assets/css/skin.styl
@import "lib/variables"
@import "lib/mixins"

// Layout

// .ui-page
//    background: url(/images/Background_PerforatedMetal@2x.png)

@font-face
   font-family: JerseyM54
   src: url(/fonts/JerseyM54.ttf)

.clear
   clear: both
   height: 1px

.header
   position: relative
   dropshadow: 0 2px 3px rgba(0,0,0,.5)
   z-index: 500
   .ui-btn-left
   .ui-btn-right
      top: 5px
   .ui-title
      margin-top: .5em
      margin-bottom: .5em
      font-family: JerseyM54, Helvetica, Arial, sans-serif
      font-size: 1.2em
      text-transform: uppercase

.scrollable-content
   position: absolute
   top: header-height - 1
   left: 0
   right: 0
   bottom: footer-height + 1
   overflow-y: auto
   overflow-x: hidden
   -webkit-overflow-scrolling: touch

.ui-page
   background: url(/images/Background_PerforatedMetal@2x.png) 50% 0
   background-size: 320px 480px

.footer
   .ui-navbar
      position: relative
      dropshadow: 0 -2px 3px rgba(0,0,0,.6)
      z-index: 500
   .ui-btn-inner
      padding-top: 38px
   .ui-btn-text
      font-size: .7em
      top: 7px
   .ui-icon.ui-icon-custom
      width: 48px
      height: 32px
      background: url(/images/icons/icons-tab.png) no-repeat;
      background-size: 260px 32px
      margin-left: -24px
   .profile-menu .ui-icon
      background-position: -159px 0
   .points-menu .ui-icon
      background-position: -106px 0
   .leaderboard-menu .ui-icon
      background-position: -53px 0
   .connect-menu .ui-icon
      background-position: 0 0
   .preferences-menu .ui-icon
      background-position: -212px 0

// Elements
.team-glass
   font-size: .7em
   background: url(/images/games/Overlay_TeamGlass_iPhone@2x.png)
   background-size: 134px 43px
   width: 110px
   height: 25px
   padding: 8px 12px 10px 12px
   text-align: center

   .team
      margin-bottom: 2px

   .record
      color: color-light-gray
      font-size: .9em

.scrolling-text
   position: relative
   width: 280px
   height: 24px
   margin: 4px auto
   background: url(/images/Overlay_ScrollBarBase@2x.png) repeat-x 0% 50%
   background-size: 2px 20px
   .text-wrap
      position: absolute
      left: 18px
      right: -2px
      height: 24px
      overflow: hidden
      .text
         font-size: .75em
         text-transform: uppercase
         line-height: 24px
         position: absolute;
         white-space: nowrap
   .cover
      position: absolute
      left: -5px
      width: 290px
      height: 24px
      background: url(/images/Overlay_ScrollBarFrame_iPhone@2x.png)
      background-size: 290px 24px
      dropshadow: 0 2px 4px rgba(0,0,0,0.8)
      border-radius: 5px
      z-index: 50

.pattern-bg .ui-li
   background: url(/images/Pattern_FabricKnit@2x.png)
   background-size: 4px 4px
   position: relative
   dropshadow: inset 0 10px 15px rgba(255,255,255, .4), inset 0 -10px 15px rgba(200,200,200,.4)

.fans
   .fan
      .image-wrap
         position: relative
         width: 43px
         height: 43px
         float: left
         border-radius: 5px
         img
            width: 43px
            height: 43px
            border-radius: 5px
         .cover
            position: absolute
            top: 0
            left: 0
            width: 43px
            height: 43px
            border-radius: 5px
            dropshadow: inset 1px 2px 3px rgba(0,0,0,0.6), 0 1px 2px rgba(255, 255, 255, 0.8), 0 -1px 1px rgba(0, 0, 0, 0.8)
      .fan-info
         margin: -2px 0 0 60px
         .name
            font-size: 1.5em
            font-weight: bold
         .team
            font-size: .9em
            font-weight: lighter
            margin: 3px 0 4px 0
            color: color-red
      .data-wrap
         font-size: .8em
         padding-top: 4px
         margin-bottom: -6px
         .data
            margin-right: 28px
            .label
               color: color-dark-gray
               margin-right: 4px
// Icons
.icon
   &.settings
      width: 29px
      height: 29px
      background: url(/images/icons/icons-settings.png) no-repeat;
      background-size: 301px 29px

      &.full-tilt-ventures
         background-position: 0 0
      &.rade-eecles
         background-position: -34px 0
      &.fannect
         background-position: -68px 0
      &.account
         background-position: -102px 0
      &.more-apps
         background-position: -136px 0
      &.privacy
         background-position: -170px 0
      &.rate-it
         background-position: -204px 0
      &.technical-support
         background-position: -238px 0
      &.tell-friend
         background-position: -204px 0

   &.gamecell
      width: 72px
      height: 72px
      background: url(/images/icons/icons-gamecell.png) no-repeat;
      background-size: 226px 72px
            
      &.attendence-streak
         background-position: 0 0
      &.game-face
         background-position: -77px 0
      &.guess-the-score
         background-position: -154px 0
      

